<resources>
    <string name="app_name">RentMe</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile_number">Phone</string>
    <string name="hint_address">Address</string>
    <string name="hint_password">Password</string>
    <string name="text_sign_into_your_account">Sign into your account</string>
    <string name="text_dont_have_account">Don\'t have an Account?</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_slogan">The ultimate vacant room finder</string>
</resources>
