<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarThumbVertical="@null">
        <LinearLayout
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/signup_image_layout"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:layout_marginBottom="1dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/register_iv"
                    android:layout_marginTop="10dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/person"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:text="Signup"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </RelativeLayout>
            <androidx.cardview.widget.CardView
                app:cardElevation="2dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <EditText
                    android:id="@+id/nameEt"
                    android:background="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_name"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="10dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardElevation="2dp">
                <EditText
                    android:id="@+id/emailEt"
                    android:background="#FFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_mail_black_24dp"
                    android:drawablePadding="10dp"
                    android:layout_marginLeft="12dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginRight="12dp"
                    android:hint="@string/hint_email"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardElevation="2dp">
                <EditText
                    android:id="@+id/phoneEt"
                    android:background="#FFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/hint_mobile_number"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                app:cardElevation="2dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <EditText
                    android:id="@+id/addressEt"
                    android:background="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:hint="@string/hint_address"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/passwordEt"
                    android:background="#FFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/cnfm_passwordEt"
                    android:background="#FFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:hint="@string/hint_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />

            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:background="@color/colorAccent"
                android:layout_margin="18dp"
                android:minWidth="340dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
                android:text="Back to SIGN IN"
                android:textSize="15dp"
                android:onClick="backbtn"
                android:drawablePadding="15dp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>