<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbarThumbVertical="@null"
        android:scrollbarThumbHorizontal="@null"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="162dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_name_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="60sp"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#696969"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_sign_into_your_account"
                    android:textSize="20dp" />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="24dp"
                app:cardElevation="2dp"
                android:layout_margin="8dp"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/emailorphoneEt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="#FFF"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="Phone number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:minWidth="320dp"
                    android:minHeight="50dp"
                    android:singleLine="true" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="24dp"
                app:cardElevation="2dp"
                android:layout_margin="8dp"
                android:layout_gravity="center">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:passwordToggleEnabled="true"
                    app:hintEnabled="false">
                    <EditText
                        android:id="@+id/loginPwdEt"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#FFF"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/signInBtn"
                android:background="@drawable/button_bg"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:text="@string/btn_login" />
            <TextView
                android:id="@+id/create_act_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:padding="20dp"
                android:text="@string/text_dont_have_account" />
        </LinearLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="5dp" />
</androidx.constraintlayout.widget.ConstraintLayout>